# python-mpd2

./: .envrc  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  INSTALL.rst  MANIFEST.in  Makefile  PORTING.rst  README.md  README.rst  README.txt  TODO  TODO.txt  default.nix  flake.nix  mpd.py  mpd_test.py  mpd_twisted.py  pyproject.toml  setup.cfg  setup.py  shell.nix  test.py  tox.ini
.github/workflows/: test.yml  update-flake-lock.yml
doc/: Makefile  changes.rst  commands.rst  commands.txt  commands_header.txt  conf.py  generate_command_reference.py  index.rst
doc/topics/: advanced.rst  commands.rst  getting-started.rst  logging.rst
examples/: asyncio_example.py  count.py  coverart.py  errorhandling.py  helloworld.py  idle.py  locking.py  logger.py  multitags.py  randomqueue.py  stats.py  stickers.py  summary.txt  twisted.py  twisted_example.py
mpd/: __init__.py  asyncio.py  base.py  tests.py  twisted.py
